# openapi.json
@@ -2646,6 +2646,24 @@
             "title": "Is Translations Supported",
             "description": "Flag that determines whether Flow supports prompt translations.",
             "default": false
+          },
+          "is_macos_supported": {
+            "type": "boolean",
+            "title": "Is Macos Supported",
+            "description": "Flag indicating whether the macOS PyTorch version can correctly run this flow.",
+            "default": true
+          },
+          "is_supported_by_workers": {
+            "type": "boolean",
+            "title": "Is Supported By Workers",
+            "description": "Flag indicating if this flow can run on workers based on their capabilities.",
+            "default": true
+          },
+          "required_memory_gb": {
+            "type": "number",
+            "title": "Required Memory Gb",
+            "description": "Minimum amount of memory (in gigabytes) required to execute this flow.",
+            "default": 0.0
           }
         },
         "type": "object",
@@ -3040,6 +3058,17 @@
             "title": "Translated Input Params",
             "description": "If auto-translation feature is enabled, contains translations for input values."
           },
+          "extra_flags": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/ExtraFlags"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "description": "Set of additional options and flags that affect how the task is executed."
+          },
           "created_at": {
             "type": "string",
             "format": "date-time",
@@ -3116,17 +3145,6 @@
               }
             ],
             "description": "Profiling information about task execution, present only if profiling was enabled for this task."
-          },
-          "extra_flags": {
-            "anyOf": [
-              {
-                "$ref": "#/components/schemas/ExtraFlags"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "description": "Set of additional options and flags that affect how the task is executed."
           },
           "custom_worker": {
             "anyOf": [
@@ -3341,6 +3359,17 @@
             ],
             "title": "Translated Input Params",
             "description": "If auto-translation feature is enabled, contains translations for input values."
+          },
+          "extra_flags": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/ExtraFlags"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "description": "Set of additional options and flags that affect how the task is executed."
           }
         },
         "type": "object",
@@ -3796,7 +3825,7 @@
             "format": "date-time",
             "title": "Last Seen",
             "description": "Last seen time",
-            "default": "2025-01-09T20:59:12.513686Z"
+            "default": "2025-01-14T15:55:33.769629Z"
           },
           "engine_details": {
             "$ref": "#/components/schemas/ComfyEngineDetails"
