# visionatrix/pydantic_models.py
@@ -103,6 +103,15 @@ class Flow(BaseModel):
     is_translations_supported: bool = Field(
         False, description="Flag that determines whether Flow supports prompt translations."
     )
+    is_macos_supported: bool = Field(
+        True, description="Flag indicating whether the macOS PyTorch version can correctly run this flow."
+    )
+    is_supported_by_workers: bool = Field(
+        True, description="Flag indicating if this flow can run on workers based on their capabilities."
+    )
+    required_memory_gb: float = Field(
+        0.0, description="Minimum amount of memory (in gigabytes) required to execute this flow."
+    )
 
     def __hash__(self):
         return hash(self.name)
@@ -191,6 +200,10 @@ class TaskDetailsShort(BaseModel):
     translated_input_params: dict | None = Field(
         None, description="If auto-translation feature is enabled, contains translations for input values."
     )
+    extra_flags: ExtraFlags | None = Field(
+        None,
+        description="Set of additional options and flags that affect how the task is executed.",
+    )
 
     @model_validator(mode="after")
     def adjust_priority(self) -> Self:
@@ -215,10 +228,6 @@ class TaskDetails(TaskDetailsShort):
     execution_details: ExecutionDetails | None = Field(
         None,
         description="Profiling information about task execution, present only if profiling was enabled for this task.",
-    )
-    extra_flags: ExtraFlags | None = Field(
-        None,
-        description="Set of additional options and flags that affect how the task is executed.",
     )
     custom_worker: str | None = Field(
         None, description="ID of the worker to which the task was explicitly assigned, if specified."
